--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,8 +50,8 @@ jobs:
 
       - name: 提交更改
         run: |
-          git config --local user.email "ssili@126.com"
-          git config --local user.name "ssili126"
+          git config --local user.email "sanyo@126.com"
+          git config --local user.name "pm20120"
           git add .
           git commit *.txt -m "Add generated file"
           #git pull --rebase
